rename app from sample app to ideatank

--- a/public/404.html
+++ b/public/404.html
@@ -50,9 +50,10 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>Oh no! The page you were looking for doesn't exist.</h1>
+    <p>You may have mistyped the address or the page may have moved. But hey, major props for seekng to explore the yet undiscovered, and don't let this minor setback slow you down on your quest to save the world.</p>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
+  <p>Click HERE to return to the home page.</p>
+  <p>If you think there may be a glitch on the website, let us know through the contact form and we'll be sure to have it fixed!</p>
 </body>
 </html>
