--- a/public/422.html
+++ b/public/422.html
@@ -50,9 +50,10 @@
 <body>
   <!-- This file lives in public/422.html -->
   <div class="dialog">
-    <h1>The change you wanted was rejected.</h1>
-    <p>Maybe you tried to change something you didn't have access to.</p>
+    <h1>Oh no! The change you wanted was rejected.</h1>
+    <p>Maybe you tried to change something you didn't have access to. But hey, major props for dreaming big, and don't let this minor setback slow you down on your quest to save the world.</p>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
+  <p>Click HERE to return to the home page.</p>
+  <p>If you think there may be a glitch on the website, let us know through the CONTACT form and we'll be sure to have it fixed!</p>
 </body>
 </html>
