--- a/public/500.html
+++ b/public/500.html
@@ -50,8 +50,10 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <h1>Alas! We're sorry, but something went wrong.</h1>
+  <p>But hey, don't let this minor setback slow you down on your quest to save the world!</p>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
+  <p>Click HERE to return to the home page.</p>
+  <p>If you think there may be a glitch on the website, let us know through the CONTACT form and we'll be sure to have it fixed!</p>
 </body>
 </html>
